--- a/app/templates/ranking-page.html
+++ b/app/templates/ranking-page.html
@@ -25,7 +25,7 @@
         <div class="col-md-1 column">
           <!-- Image link points to the personal profile page -->
 
-          <img alt="Profile Picture" src="{{ user.profile_picture }}" class="rounded-circle" />
+          <img alt="Profile Picture" src= "{{ user.robohash_url }}" class="rounded-circle" />
 
         </div>
         <div class="col-md-11">
