--- a/app/templates/post-details.html
+++ b/app/templates/post-details.html
@@ -18,137 +18,116 @@
 {% block main %}
 <!-- title header -->
 <div class="header">
-    <h1 class="danger-text">Post Title</h1> 
+    <h1 class="danger-text">{{ post.title }}</h1>
 </div>
 <div class="container">
     <div class="row clearfix">
         <!-- comment section -->
         <div class="col-12 col-md-3 column">
-            <button type="button" class="btn btn-warning bg-gradient text-white px-3 mx-5 reply" data-bs-toggle="modal" data-bs-target="#ModalComment" id="newpostpageBtn">Post a comment
+            <button type="button" class="btn btn-warning bg-gradient text-white px-3 mx-5 reply" data-bs-toggle="modal"
+                data-bs-target="#ModalComment" id="newpostpageBtn">Post a comment
             </button>
         </div>
-            
-    <!-- Author content -->
-    <div class="row  mt-2">
-        <div class="col-12 col-md-3"></div> 
-        <div class="col-12 col-md-9">
-            <span class="--bs-danger-bg-subtle"><b>author:</b></span>
-                <div class="author-content p-3  mt-2" style="max-width: 90%; overflow-y: auto;">
-                    <p>这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
 
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                    </p>
+        <!-- Author content -->
+        <div class="row  mt-2">
+            <div class="col-12 col-md-3"></div>
+            <div class="col-12 col-md-9">
+                <span class="--bs-danger-bg-subtle"><b>author:</b> {{post.author.username}}</span>
+                <div class="author-content p-3  mt-2" style="max-width: 90%; overflow-y: auto;">
+                    <p>{{post.body}}</p>
                 </div>
             </div>
-            
+
         </div>
-        <div class="col-md-2"></div> 
+        <div class="col-md-2"></div>
     </div>
     <hr>
 
-     <!-- comment section -->
-    <div class="container">  
+    <!-- comment section -->
+    <div class="container">
         <div class="row clearfix">
             <!-- reply button -->
             <div class="col-12 col-md-3 column">
-                <button type="button" class="btn btn-warning bg-gradient text-white px-3 mx-5 reply" data-bs-toggle="modal" data-bs-target="#ModalReply" id="newpostpageBtn">Reply
+                <button type="button" class="btn btn-warning bg-gradient text-white px-3 mx-5 reply"
+                    data-bs-toggle="modal" data-bs-target="#ModalReply" id="newpostpageBtn">Reply
                 </button>
             </div>
-                
-        <!-- comment -->
-        <div class="row  mt-2">
-            <div class="col-12 col-md-3"></div> 
-            <div class="col-12 col-md-9">
-                
-                <span class="--bs-danger-bg-subtle mt-0"><b>author:</b></span>
+
+            <!-- comment -->
+            <div class="row  mt-2">
+                <div class="col-12 col-md-3"></div>
+                <div class="col-12 col-md-9">
                     <div class="comment-content p-3  mt-2" style="max-width: 90%; overflow-y: auto;">
-                        <p>这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-    
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                            这里是帖子的内容，当内容超出设定高度时，将出现滚动条，可以继续向下滚动查看更多内容。
-                        </p>
+                        {% if comments %}
+                        {% for comment in comments %}
+                                <li>
+                                    <span class="--bs-danger-bg-subtle mt-0"><b>author: {{ comment.author.username }}</b></span>
+                                    <p> {{ comment.body }}</p>
+                                </li>
+                            {% endfor %}
+                        {% else %}
+                                <p>Please make the first comment</p>
+                        {% endif %}
                     </div>
                 </div>
-                
+
             </div>
-            <div class="col-md-2"></div> 
+            <div class="col-md-2"></div>
         </div>
-    
 
 
 
 
-<!--Modal -->
-<div class="modal fade" id="ModalComment" aria-hidden="true" aria-labelledby="ModalToggleLabel" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="ModalToggleLabel">Post a Comment</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="commentText" class="form-label">Your Comment</label>
-                        <textarea class="form-control" id="commentText" rows="3"></textarea>
+
+        <!--Modal -->
+        <div class="modal fade" id="ModalComment" aria-hidden="true" aria-labelledby="ModalToggleLabel" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="ModalToggleLabel">Post a Comment</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="commentText" class="form-label">Your Comment</label>
+                                <textarea class="form-control" id="commentText" rows="3"></textarea>
+                            </div>
 
-                    <button type="submit" class="btn btn-primary">Submit Comment</button>
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="ModalReply" aria-hidden="true" aria-labelledby="ModalToggleLabel" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="ModalToggleLabel">Post a Reply</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <form>
-                    <div class="mb-3">
-                        <label for="commentText" class="form-label">Your Comment</label>
-                        <textarea class="form-control" id="commentText" rows="3"></textarea>
+                            <button type="submit" class="btn btn-primary">Submit Comment</button>
+                        </form>
                     </div>
-
-                    <button type="submit" class="btn btn-primary">Submit Reply</button>
-                </form>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+
+        <div class="modal fade" id="ModalReply" aria-hidden="true" aria-labelledby="ModalToggleLabel" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="ModalToggleLabel">Post a Reply</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <label for="commentText" class="form-label">Your Comment</label>
+                                <textarea class="form-control" id="commentText" rows="3"></textarea>
+                            </div>
+
+                            <button type="submit" class="btn btn-primary">Submit Reply</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
-{% endblock %}
-{% block script %}
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-<script src="{{ url_for('static', filename='js/new-discussion.js') }}"></script>
-{% endblock %}
+        {% endblock %}
+        {% block script %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+        <script src="{{ url_for('static', filename='js/new-discussion.js') }}"></script>
+        {% endblock %}
